# gilvave-server

./: .env  Cargo.toml  docker-compose.yml  gilvave-server.code-workspace
crates/core/: Cargo.toml
crates/core/src/: error.rs  event.rs  ids.rs  lib.rs
crates/core/src/dto/: channel.rs  message.rs  mod.rs  server.rs  user.rs
crates/core/src/ids/: mod.rs  v4.rs  v7.rs
crates/core/src/model/: channel.rs  guild.rs  message.rs  mod.rs  ref_token.rs  server.rs  server_member.rs  user.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: handler.rs  lib.rs  ws.rs
crates/http-api/: Cargo.toml
crates/http-api/src/: lib.rs  routes.rs
crates/http-api/src/handlers/: user.rs
crates/infra/: Cargo.toml  build.rs
crates/infra/src/: auth.rs  db.rs  jwt.rs  lib.rs  user_repo.rs
crates/infra/src/security/: auth.rs
crates/infra/src/service/: channel.rs  message.rs  mod.rs  ref_token.rs  ref_token_service.rs  server.rs  user.rs  user_service.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/messaging/: Cargo.toml  build.rs
crates/messaging/src/: consumer.rs  event.rs  lib.rs  publisher.rs
crates/realtime/: Cargo.toml
crates/realtime/src/: lib.rs
crates/settings/: Cargo.toml  build.rs
crates/settings/src/: lib.rs
migrations/: 20260401151637_user_create.sql  20260401173820_add_password_hash_column_to_users.sql  20260416080636_user_table_update.sql  20260420201309_create_user_table.sql  20260420201607_create_refresh_token_table.sql  20260429192139_create_tables_servers_servermembers_channels_messages.sql
services/gateway/: Cargo.toml
services/gateway/src/: handler.rs  main.rs  service.rs  state.rs  ws.rs
services/gateway/src/events/: broker.rs  client.rs  handler.rs  mod.rs  server.rs
services/http-api/: Cargo.toml
services/http-api/src/: errors.rs  main.rs  routes.rs  state.rs
services/http-api/src/handlers/: channel.rs  server.rs  user.rs
services/http-api/src/routes/: channel.rs  mod.rs  server.rs  user.rs
services/realtime/: Cargo.toml
services/realtime/src/: lib.rs
