[package]
name = "gilvave-gateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

tracing.workspace = true
anyhow.workspace = true

futures = "0.3.32"

gilvave-core = { path = "../core" }
gilvave-realtime = { path = "../realtime" }
gilvave-infra = { path = "../infra" }
