[package]
name = "gilvave-infra"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
dotenvy.workspace = true
argon2.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true

gilvave-core = { path = "../core" }

[build-dependencies]
dotenvy = "0.15.7"
