[package]
name = "gilvave-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
dotenvy.workspace = true
argon2.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true
time.workspace = true
base64 = "0.22.1"

gilvave-core = { path = "../core" }
gilvave-settings = { path = "../settings" }
