[package]
name = "gilvave-messaging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
lapin = "4.4.0"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true

[build-dependencies]
dotenvy.workspace = true
