[package]
name = "gilvave-http-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jsonwebtoken.workspace = true
serde_json.workspace = true
mimalloc.workspace = true

gilvave-core = { path = "../../crates/core" }
gilvave-infra = { path = "../../crates/infra" }
gilvave-messaging = { path = "../../crates/messaging" }
gilvave-settings = { path = "../../crates/settings" }
